--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -19,6 +19,7 @@ Changes from 2.2.4 to 2.2.5
 * Added eZOrderConfirmation class to confirm order and send confirmation mails in eZ trade.
 * Added user/confirmation.php which will confirm the order after payment.php in eZ trade.
 * Added include for cache in headlines.php in eZ article.
+* Added advanced user search in eZ user.
 
 Changes from 2.2.3 to 2.2.4
 ---------------------------
