--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -3,6 +3,9 @@ eZ publish changelog:
 
 Changes from 2.2.4 to 2.2.5
 ---------------------------
+* Sitewide language setting is now controlled by the Language key in group site, the old eZCalendarMain code is still present.
+* Fixed problem where the session language setting was overriden by the section language.
+* Added support for sending over the sitewide language and charset in xmlrpc interface.
 * Fixed notification bug when articles got published from eZ publish DE.
 * Fixed several permission bugs in eZ imagecatalogue.
 * Fixed several permission bugs in eZ filemanager.
