--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -27,6 +27,7 @@ Changes from 2.2.4 to 2.2.5
 * Added include for cache in headlines.php in eZ article.
 * Added advanced user search in eZ user.
 * Fixed bug with permissions in advanced search in eZ article.
+* Fixed bug in eZ filemanager in fileview.
 
 Changes from 2.2.3 to 2.2.4
 ---------------------------
