--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -31,6 +31,7 @@ Changes from 2.2.4 to 2.2.5
 * Fixed bug in eZ imagecatalogue when browsing images in imagelist
 * fixed bug with day and month report in eZ stats.
 * Fixed bug in eZ imagecatalogue with permissions on images in the imagelist.
+* Fixed bug in eZ stats with top visitor list.
 
 Changes from 2.2.3 to 2.2.4
 ---------------------------
