--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -1,6 +1,10 @@
 eZ publish changelog:
 ---------------------
 
+Changes from 2.2.5 to 2.2.6
+---------------------------
+* Group edit now only shows permissions from enabled modules.
+
 Changes from 2.2.4 to 2.2.5
 ---------------------------
 * Added article edit and image category to section charset override.
