--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -3,6 +3,7 @@ eZ publish changelog:
 
 Changes from 2.2.5 to 2.2.6
 ---------------------------
+* Fixed bug when adding image tag to non existant image.
 * Fixed a bug in forgot password
 * Group edit now only shows permissions from enabled modules.
 
