--- a/contribution/versions/ezpublish2/trunk/projects/php/vidartest/README
+++ b/contribution/versions/ezpublish2/trunk/projects/php/vidartest/README
@@ -22,3 +22,6 @@ and minimalserver.php, which shows the basics and client.php and server.php whic
 shows some more use of datatypes and parameters.
 
 Any comments / suggestions can be sendt to bf@ez.no.
+
+sdfsdf
+
