--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.ps
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/installation/INSTALL.ps
@@ -11,7 +11,7 @@
 %DVIPSWebPage: (www.radicaleye.com)
 %DVIPSCommandLine: dvips -t a4 -o INSTALL.ps INSTALL.dvi
 %DVIPSParameters: dpi=600, compressed
-%DVIPSSource:  TeX output 2002.01.18:1006
+%DVIPSSource:  TeX output 2002.06.10:1421
 %%BeginProcSet: texc.pro
 %!
 /TeXDict 300 dict def TeXDict begin/N{def}def/B{bind def}N/S{exch}N/X{S
@@ -284,20 +284,21 @@ rf /Fc 107[ 35 35 22[ 35 1[ 35 35 35 35 35 35 35 35 35
 58.1154 /Courier rf /Fd 133[ 50 50 1[ 50 50 1[ 50 50
 50 50 50 50 50 50 50 50 1[ 50 50 50 1[ 50 50 50 1[ 50
 38[ 50 10[ 50 50 46[{ TeXBase1Encoding ReEncodeFont} 24
-83.022 /Courier rf /Fe 199[ 29 29 29 29 29 29 29 50[{
-TeXBase1Encoding ReEncodeFont} 7 58.1154 /Times-Roman
+83.022 /Courier rf /Fe 198[ 29 29 29 29 29 29 29 29 50[{
+TeXBase1Encoding ReEncodeFont} 8 58.1154 /Times-Roman
 rf /Ff 133[ 29 33 33 48 33 33 18 26 22 33 33 33 33 52
 18 33 1[ 18 33 33 22 29 33 29 33 29 1[ 33 4[ 41 5[ 41
-37 44 2[ 48 48 5[ 48 1[ 37 4[ 48 6[ 18 2[ 33 3[ 33 33
-33 33 18 17 22 17 2[ 22 22 4[ 33 27 31[ 37 2[{
-TeXBase1Encoding ReEncodeFont} 50 66.4176 /Times-Roman
-rf /Fg 199[ 25 25 25 25 25 25 25 25 49[{ TeXBase1Encoding ReEncodeFont}
-8 49.8132 /Times-Roman rf /Fh 133[ 44 50 1[ 72 50 55
-33 39 44 55 55 50 55 83 28 55 33 28 55 50 33 44 55 44
-55 50 6[ 66 1[ 72 100 72 2[ 55 72 78 61 78 72 94 66 2[ 39
-78 78 61 1[ 72 72 1[ 72 1[ 50 5[ 50 50 50 50 50 50 50
-50 50 50 1[ 25 33 3[ 33 33 40[{ TeXBase1Encoding ReEncodeFont} 59
-99.6264 /Times-Bold rf
+37 44 2[ 48 48 4[ 22 48 1[ 37 4[ 48 6[ 18 2[ 33 3[ 33
+33 33 33 18 17 22 17 2[ 22 22 4[ 33 27 31[ 37 2[{
+TeXBase1Encoding ReEncodeFont} 51 66.4176 /Times-Roman
+rf /Fg 198[ 25 25 25 25 25 25 25 25 25 49[{
+TeXBase1Encoding ReEncodeFont} 9 49.8132 /Times-Roman
+rf /Fh 133[ 44 50 1[ 72 50 55 33 39 44 55 55 50 55 83
+28 55 33 28 55 50 33 44 55 44 55 50 6[ 66 1[ 72 100 72
+2[ 55 72 78 61 78 72 94 66 2[ 39 78 78 61 1[ 72 72 1[ 72
+1[ 50 5[ 50 50 50 50 50 50 50 50 50 50 1[ 25 33 3[ 33
+33 40[{ TeXBase1Encoding ReEncodeFont} 59 99.6264 /Times-Bold
+rf
 %DVIPSBitmapFont: Fi cmsy10 10 1
 /Fi 1 16 df<EB1FF0EBFFFE487F000714C04814E04814F04814F8A24814FCA3B612FEA9
 6C14FCA36C14F8A26C14F06C14E06C14C0000114006C5BEB1FF01F1F7BA42A> 15
@@ -333,12 +334,12 @@ rf /Fo 136[ 149 103 115 69 80 92 1[ 115 103 115 172 57
 55 55 60 76 37 47 47 47 23 23 42 42 42 42 42 42 42 42
 42 42 23 21 28 21 47 42 28 28 28 2[ 42 42 34 28 29[ 46
 46 2[{ TeXBase1Encoding ReEncodeFont} 92 83.022 /Times-Roman
-rf /Fq 134[ 50 3[ 50 28 1[ 33 3[ 50 5[ 50 6[ 44 22[ 39
-17[ 50 5[ 50 50 50 48[{ TeXBase1Encoding ReEncodeFont} 12
-99.6264 /Times-Roman rf /Fr 138[ 72 40 56 2[ 72 72 72
-1[ 40 2[ 40 72 2[ 64 72 1[ 72 64 6[ 88 16[ 48 1[ 104
-20[ 72 3[ 36 46[{ TeXBase1Encoding ReEncodeFont} 18 143.462
-/Times-Roman rf end
+rf /Fq 138[ 50 28 5[ 50 5[ 50 2[ 44 26[ 39 23[ 50 50
+50 48[{ TeXBase1Encoding ReEncodeFont} 9 99.6264 /Times-Roman
+rf /Fr 138[ 72 40 56 2[ 72 72 72 1[ 40 2[ 40 72 2[ 64
+72 1[ 72 64 6[ 88 16[ 48 1[ 104 20[ 72 3[ 36 46[{
+TeXBase1Encoding ReEncodeFont} 18 143.462 /Times-Roman
+rf end
 %%EndProlog
 %%BeginSetup
 %%Feature: *Resolution 600dpi
@@ -770,8 +771,8 @@ end
 @endspecial 591 2998 a
  currentpoint currentpoint translate 1 1.06113 div 1 1.06113 div scale
 neg exch neg exch translate
- 591 2998 a Fq 1544 3264 a(18th) 25
-b(January) f(2002) p 90 rotate dyy eop
+ 591 2998 a Fq 1608 3264 a(10th) 24
+b(June) h(2002) p 90 rotate dyy eop
 %%Page: 1 2
 1 1 bop 150 138 a
  currentpoint currentpoint translate 0.42603 0.42603 scale neg exch
@@ -2027,9 +2028,9 @@ b(.) 42 b(.) f(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) g(.) g(.) h(.) f
 b(Compiler/Can) f(not) h(Compile) g(\(C++/C\)) 31 b(.) 41
 b(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.)
 100 b(17) 731 1453 y(2.6.1) n(.2) 112 b(I) 20 b(am) g(getting) g
-(linkin) n(g) h(erro) n(rs) g(when) f(tryin) n(g) h(to) f(b) n(uild) g
-(PHP) 37 b(.) k(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) 100
-b(17) 465 1578 y(2.6.2) e(Problems) 20 b(After) f(Installation) 29
+(linkin) n(g) h(erro) n(rs) g(re) o(ga) n(rding) e(k) o(erber) n(os) i
+(when) f(tryin) n(g) h(to) f(b) n(uild) g(PHP) 138 b(17) 465
+1578 y(2.6.2) 98 b(Problems) 20 b(After) f(Installation) 29
 b(.) 41 b(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) h(.) f(.) g(.) g(.) h
 (.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g(.) g(.) h(.) f(.) g
 (.) h(.) f(.) 100 b(17) 731 1703 y(2.6.2) n(.1) 112 b(Permission) 19
@@ -3978,45 +3979,50 @@ Fe 1269 2456 a(3) p Fp 1323 2486 a(onw) o(ard) n(s) i(magic) f(quotes) g
 (-quotes) p Fp(\)) p Fn 150 2831 a(\226with-imap) p Fp
 40 w(This) 30 b(con\002g) n(ures) f(PHP) h(to) f(include) f(imap) h
 (suppo) n(rt.) 52 b(This) 30 b(is) g(used) e(by) h(eZ) g(mail) h(mod) n
-(ule.) 52 b(This) 29 b(pa-) 358 2909 y(ramete) n(rs) e(requ) n(ire) f
-(ssl) h(supp) n(ort.) 41 b(Imap) 25 b(does) g(also) h(ha) n(v) o(e) f
-(bindin) n(gs) h(to) g(k) o(erber) n(os.) 42 b(This) 25
-b(causes) h(some) g(linkin) n(g) 358 2988 y(pro) n(blems) e(on) g
-(RedHat) g(Linux.) 36 b(The) 24 b(w) o(ork) n(aroun) n(d) h(for) e
-(this) i(pro) n(blem) f(is) h(to) f(type) g(this) h(comm) n(and) f
-(befo) n(re) g(you) 358 3067 y(comp) n(ile) d(:) p Fk
-358 3225 a($) 39 b(export) g(LDFLAGS="-L/) n(usr/kerberos/) n(lib) h
-(-lkrb5) f(-lgssapi_) n(krb5) h(-lpam") p Fn 150 3391
+(ule.) 52 b(This) 29 b(pa-) 358 2909 y(ramete) n(rs) d(requir) n(e) g
+(ssl) g(suppo) n(rt.) 40 b(Imap) 24 b(does) h(also) h(ha) n(v) o(e) e
+(bindin) n(gs) i(to) f(k) o(erber) n(os.) 40 b(This) 25
+b(caused) g(some) g(linkin) n(g) 358 2988 y(pro) n(blems) g(on) g
+(RedHat) h(Linu) n(x) g(7.0) e(and) h(RedHat) g(Linux) f(7.1.) 40
+b(Either) 24 b(you) h(ha) n(v) o(e) f(to) i(install) f(the) h(k) o(erb)
+n(eros) f(up-) 358 3084 y(dates) p Fe 529 3054 a(4) p
+Fp 582 3084 a(released) 20 b(by) g(RedHat) g(or) g(apply) f(type) h
+(this) h(comm) n(and) f(befo) n(re) h(you) e(comp) n(ile) i(php) e(:) p
+Fk 358 3242 a($) 39 b(export) g(LDFLAGS="-L/) n(usr/kerberos/) n(lib) h
+(-lkrb5) f(-lgssapi_) n(krb5) h(-lpam") p Fn 150 3408
 a(\226with-o) n(penssl) p Fp 43 w(This) 20 b(will) h(enable) f(ssl) h
-(suppo) n(rt) g(in) f(PHP) 150 3599 y(Y) -9 b(ou) 26
+(suppo) n(rt) g(in) f(PHP) 150 3615 y(Y) -9 b(ou) 26
 b(should) g(also) h(go) g(throu) n(gh) g(the) g(web) f(page:) p
 Ff 38 w(htt) r(p://www) l(.php.net) r(/manual) r(/en/i) r(nstall) r
 (.con\002gure.php) p Fp 29 w(and) g(mak) o(e) h(sure) f(that) 150
-3698 y(there) 20 b(isn') o(t) g(other) f(func) n(tionality) h(you) f(w)
+3715 y(there) 20 b(isn') o(t) g(other) f(func) n(tionality) h(you) f(w)
 o(ould) h(lik) o(e) g(to) h(ha) n(v) o(e) e(included) n(.) p
-Fn 150 3944 a(Command) 26 b(Line) p Fp 83 w(The) f(def) o(ault) g(is) i
+Fn 150 3961 a(Command) 26 b(Line) p Fp 83 w(The) f(def) o(ault) g(is) i
 (to) f(create) f(a) h(comm) n(and) f(line) h(v) o(ersion) e(of) i(PHP)
 -9 b(.) 26 b(Ther) n(efore) f(you) g(don) n(') o(t) h(need) e(to) 150
-4044 y(add) c(mor) n(e) h(con\002gu) n(ration) f(optio) n(ns) h(for) e
-(this.) p Fn 150 4290 a(A) n(pache) h(Module) p Fp 83
+4061 y(add) c(mor) n(e) h(con\002gu) n(ration) f(optio) n(ns) h(for) e
+(this.) p Fn 150 4307 a(A) n(pache) h(Module) p Fp 83
 w(T) -7 b(o) 21 b(b) n(uild) e(an) i(apach) n(e) g(mod) n(ule) g(you) e
-(need) g(to) i(add:) p Fn 150 4476 a(\226with-a) n(pxs) p
+(need) g(to) i(add:) p Fn 150 4493 a(\226with-a) n(pxs) p
 Fp 42 w(This) f(compiles) g(PHP) h(as) g(an) f(apache) f(modu) n(le.) p
-Ff 358 4555 a(\(http:/) r(/www) l(.php.net/ma) r(nual/e) r(n/inst) r
+Ff 358 4572 a(\(http:/) r(/www) l(.php.net/ma) r(nual/e) r(n/inst) r
 (all.con\002g) r(ure.php#in) r(stall.co) r(n\002gure.with-) r(apxs\)) p
-Fn 150 4801 a(Other) j(W) -5 b(eb) 23 b(Ser) o(v) o(ers) p
+Fn 150 4818 a(Other) j(W) -5 b(eb) 23 b(Ser) o(v) o(ers) p
 Fp 82 w(W) -7 b(e) 24 b(ha) n(v) o(en) n(') o(t) e(tested) h(our) e
 (softw) o(are) h(with) h(other) e(web) h(serv) o(ers) g(than) g(apache)
-n(.) 32 b(If) 22 b(you) g(need) f(to) 150 4901 y(try) 16
+n(.) 32 b(If) 22 b(you) g(need) f(to) 150 4918 y(try) 16
 b(out) g(other) f(web) h(serv) o(er) n(s,) i(read) e(this) g(docum) n
 (ent) p Ff 16 w(http) r(://www) l(.php.net) r(/manual) r(/en/i) r
 (nstall) r(.con\002gure.php#i) r(nstall) r(.con\002gure.serv) q(ers) p
-Fp 150 5001 a(to) k(learn) g(ho) n(w) g(you) f(con\002gu) n(re) h(for) g
+Fp 150 5017 a(to) k(learn) g(ho) n(w) g(you) f(con\002gu) n(re) h(for) g
 (the) g(web) g(serv) o(er) f(you) h(will) h(be) f(using.) p
-150 5054 1410 4 v Fg 240 5109 a(3) p Ff 270 5132 a(eZ) c(publi) r(sh) g
+150 5071 1410 4 v Fg 240 5126 a(3) p Ff 270 5149 a(eZ) c(publi) r(sh) g
 (v) o(ersi) r(ons) g(prior) i(to) f(2.1) g(requi) r(red) g(magic) h
-(quotes) g(to) f(be) g(ena) r(bled) p 150 5723 3525 4
-v Fp 1892 5823 a(9) p 90 rotate dyy eop
+(quotes) g(to) f(be) g(ena) r(bled) p Fg 240 5207 a(4) p
+Ff 270 5230 a(Install) r(ing) g(the) h(k) o(erbe) r(ros) e(upda) r(tes)
+h(and) g(the) h(othe) r(r) e(updat) r(es) h(for) g(these) h(operat) r
+(ing) f(systems) g(is) g(highl) r(y) g(recommende) r(d) p
+150 5723 3525 4 v Fp 1892 5823 a(9) p 90 rotate dyy eop
 %%Page: 10 11
 10 10 bop 150 138 a
  currentpoint currentpoint translate 0.42603 0.42603 scale neg exch
@@ -4414,19 +4420,20 @@ b(.ph) n(p.net.) 24 b(Y) -9 b(ou) 20 b(should) f(get) h(a) h(\002le) g
 Fk 150 3604 a($) 40 b(tar) f(-xzf) g(php-4.0.6.tar) n(.gz) p
 Fp 150 3827 a(No) n(w) -5 b(,) 19 b(enter) h(the) g(source) g(directo) n
 (ry) p Fk 150 3951 a($) 40 b(cd) f(php-4.0.6) p Fp 150
-4174 a(Apply) 19 b(the) i(k) o(erb) n(eros) f(w) o(orkaro) n(und:) p
-Fk 150 4298 a($) 40 b(export) f(LDFLAGS=) n("-L/usr/kerber) n(os/lib) g
-(-lkrb5) g(-lgssapi_krb) n(5) h(-lpam") p Fp 150 4521
-a(Run) 20 b(the) g(con\002gu) n(re) h(script:) p Fk 150
-4624 a($) 40 b(./configu) n(re) g(--with-apx) n(s=/usr/sbin/a) n(pxs) g
-(--enable-f) n(tp) g(--enable-t) n(rans-sid) f(--with-conf) n(ig-file-)
-150 4703 y(path=/etc/h) n(ttpd) h(--with-m) n(ysql=/usr) f(--with-pgs) n
-(ql=/usr) g(--enable-inl) n(ine-optimizat) n(ion) h(--with-ttf) 150
-4782 y(--with-gd) f(--enabl) n(e-gd-native-tt) n(f) h(--with-imap) e
-(--includedir) n(=/usr) i(--with-o) n(penssl=/usr) f(--with-) 150
-4861 y(zlib-dir=/u) n(sr) h(--with-ope) n(nssl=shared,/) n(usr) p
-Fp 150 5063 a(Compile) 20 b(the) g(modu) n(le:) p Fk
-150 5187 a($) 40 b(make) p Fp 150 5410 a(Install) 20
+4174 a(Apply) 19 b(the) i(k) o(erb) n(eros) f(w) o(orkaro) n(und) f(if)
+i(necessary) e(\(se) i(chapter) e(2.2.) n(1.2) h(for) g(mor) n(e) h
+(info\)) n(:) p Fk 150 4298 a($) 40 b(export) f(LDFLAGS=) n
+("-L/usr/kerber) n(os/lib) g(-lkrb5) g(-lgssapi_krb) n(5) h(-lpam") p
+Fp 150 4521 a(Run) 20 b(the) g(con\002gu) n(re) h(script:) p
+Fk 150 4624 a($) 40 b(./configu) n(re) g(--with-apx) n(s=/usr/sbin/a) n
+(pxs) g(--enable-f) n(tp) g(--enable-t) n(rans-sid) f(--with-conf) n
+(ig-file-) 150 4703 y(path=/etc/h) n(ttpd) h(--with-m) n(ysql=/usr) f
+(--with-pgs) n(ql=/usr) g(--enable-inl) n(ine-optimizat) n(ion) h
+(--with-ttf) 150 4782 y(--with-gd) f(--enabl) n(e-gd-native-tt) n(f) h
+(--with-imap) e(--includedir) n(=/usr) i(--with-o) n(penssl=/usr) f
+(--with-) 150 4861 y(zlib-dir=/u) n(sr) h(--with-ope) n(nssl=shared,/) n
+(usr) p Fp 150 5063 a(Compile) 20 b(the) g(modu) n(le:) p
+Fk 150 5187 a($) 40 b(make) p Fp 150 5410 a(Install) 20
 b(the) h(mod) n(ule,) f(either) g(autom) n(aticly) h(or) f(manu) n
 (ally) -5 b(.) 150 5510 y(Manually) 19 b(:) p Fk 150
 5613 a($) 40 b(su) p 150 5723 V Fp 1871 5823 a(10) p
@@ -5271,7 +5278,7 @@ b(Ther) n(e) 24 b(should) f(also) h(be) g(an) g(erro) n(r) g(log) g
 Fp 83 w(A) g(re) n(write) g(rule) f(contains) h(three) f(ar) o(gu) n
 (ments.) 36 b(The) 24 b(third) f(ar) o(g) n(ument) g(is) i(op-) 150
 3698 y(tional.) j(The) 20 b(\002rst) i(ar) o(gu) n(ment) f(describes) g
-(a) g(\(re) o(g) g(e) o(xp) p Fe 1686 3667 a(4) p Fp
+(a) g(\(re) o(g) g(e) o(xp) p Fe 1686 3667 a(5) p Fp
 1719 3698 a(\)) h(pattern) e(which) h(is) h(applied) e(to) h(the) h
 (URI.) f(If) g(the) g(URI) h(match) f(the) 150 3797 y(re) o(gu) n(lar) h
 (e) o(xpr) n(ession,) g(the) g(URI) g(is) g(substituted) f(with) h(the)
@@ -5315,7 +5322,7 @@ f(mediacatalo) n(g) h(will) g(be) g(serv) o(e) n(d) g(indepe) n(ndet) f
 b(on.) k(Permissions) 19 b(on) f(the) h(media) f(\002le) h(will) h(not)
 e(check) o(ed) g(if) h(the) g(user) f(kno) n(ws) g(the) h(\002lename.)
 24 b(This) 19 b(will) g(be) g(\002x) o(ed) p 150 5534
-1410 4 v Fg 240 5589 a(4) p Ff 270 5613 a(F) o(or) d(an) i(introdu) r
+1410 4 v Fg 240 5589 a(5) p Ff 270 5613 a(F) o(or) d(an) i(introdu) r
 (ction) g(to) f(re) o(gul) r(ar) g(e) o(xpre) r(ssions,) f(tak) o(e) j
 (a) e(look) h(at) f(http:) r(//ze) r(z.or) o(g/art) r(icle) r(/arti) r
 (cle) n(v) r(ie) n(w/1) r(1/) p 150 5723 3525 4 v Fp
@@ -6570,7 +6577,7 @@ Fp 150 1367 a(Then) 19 b(we) i(need) e(to) i(send) f(the) g(SQL) g
 (data) h(into) e(the) i(databa) n(se:) p Fk 309 1570
 a(#) 40 b(mysql) f(-upublish) g(-ppublish) f(publish) h(<) h(sql/data_)
 n(mysql.sql) p Fp 150 1772 a(Finally) 20 b(we) h(run) e(clearcach) n(e)
-p Fe 1005 1742 a(5) p Fp 1059 1772 a(to) i(mak) o(e) e(sure) h(that) h
+p Fe 1005 1742 a(6) p Fp 1059 1772 a(to) i(mak) o(e) e(sure) h(that) h
 (e) n(v) o(er) n(ything) e(presented) g(is) i(cached) e(correctly:) p
 Fk 309 1975 a(#) 40 b(./clearcach) n(e.sh) p Fn 150 2220
 a(2.4.2) n(.2) 82 b(P) n(ostgr) o(eSQ) n(L) 21 b(con\002guratio) n(n) p
@@ -6606,7 +6613,7 @@ a(Create) 20 b(a) h(database) p Fk 309 4974 a($) 40 b(createdb) f
 (publish) p Fp 150 5176 a(Create) 20 b(a) h(dabase) f(user) p
 Fk 309 5280 a($) 40 b(createuser) e(publish) h(-W) p
 Fp 150 5482 a(Create) 20 b(tables) p 150 5534 1410 4
-v Fg 240 5589 a(5) p Ff 270 5613 a(A) c(ne) n(w) i(featur) r(e) f(in) g
+v Fg 240 5589 a(6) p Ff 270 5613 a(A) c(ne) n(w) i(featur) r(e) f(in) g
 (eZ) g(publish) h(2.2) e(is) h(the) h(possibil) r(ity) g(of) e(cle) r
 (aring) i(the) g(cache) h(from) d(the) i(admin) g(site) p
 150 5723 3525 4 v Fp 1871 5823 a(15) p 90 rotate dyy
@@ -7461,31 +7468,33 @@ b(.) 41 b(It) 26 b(is) 150 2853 y(recom) n(mended) j(that) h(you) f
 (v) o(er) n(sions.) 26 b(Please) 20 b(note) g(that) g(you) g(must) g
 (comp) n(ile) h(php) f(on) f(your) g(o) n(wn.) p Fn 150
 3298 a(2.6.1) n(.2) 82 b(I) 21 b(am) g(gett) n(ing) g(linking) g(err) o
-(or) n(s) g(when) g(trying) f(to) g(b) n(uild) i(PHP) p
-Fp 150 3479 a(The) i(PHP) i(mod) n(ule) f(you) f(ha) n(v) o(e) g(comp) n
-(iled) h(will) g(be) g(link) o(ed) f(again) n(s) i(k) o(erb) n(eros.) 38
-b(This) 25 b(causes) g(some) g(linkin) n(g) g(prob) n(lems) 150
-3579 y(on) 20 b(RedHat) g(Linux.) k(The) c(w) o(orka) n(round) f(for) g
-(this) i(prob) n(lem) g(is) g(to) f(type) g(this) h(comm) n(and) f
-(befo) n(re) h(you) e(comp) n(ile) i(:) p Fk 150 3682
-a($) 40 b(export) f(LDFLAGS=) n("-L/usr/kerber) n(os/lib) g(-lkrb5) g
-(-lgssapi_krb) n(5) h(-lpam") p Fh 150 3945 a(2.6.2) 99
-b(Pr) n(oblems) 25 b(After) h(Installatio) n(n) p Fn
-150 4126 a(2.6.2) n(.1) 82 b(P) n(ermission) 21 b(Denied) p
-Fa 150 4298 a(Warning:) 88 b(fopen\("site) n(.ini","r+"\)) 150
-4414 y(Permissio) n(n) 45 b(denied) f(in) g(classes/INIF) n(ile.php) g
-(on) h(line) f(80) p Fp 150 4539 a(If) 20 b(you) f(get) i(this) f
-(error) f(message) h(you) g(need) f(to) h(run) g(the) g(\223mod\002x) n
-(.sh\224) g(script.) p Fn 150 4784 a(2.6.2) n(.2) 82
-b(Can) 21 b(not) f(see) h(Images) p Fp 150 4965 a(Image) n(Magick) d
-(is) h(not) f(w) o(orking) n(,) h(mak) o(e) f(sure) h(that) f(it) h(is)
-h(w) o(ork) n(ing) f(by) e(using) h(the) h(comm) n(and) f(line) h(comm)
-n(and) f(\223con) m(v) m(ert\224.) p Fn 150 5211 a(2.6.2) n(.3) 82
-b(W) -5 b(ar) o(ning) 20 b(about) f(T) -8 b(emp) 22 b(Dir) o(ecto) n
-(ry) p Fp 150 5392 a(If) e(you) f(get) i(an) o(y) e(such) h(w) o
-(arning) f(you) g(need) h(to) g(set) h(the) f(temp) g(director) n(y) g
-(in) h(php) n(.ini.) p 150 5723 V 1871 5823 a(17) p 90 rotate
-dyy eop
+(or) n(s) g(r) o(egarding) e(k) o(erber) o(os) h(when) h(trying) f(to) g
+(b) n(uild) h(PHP) p Fp 150 3479 a(The) 16 b(PHP) i(mod) n(ule) f(you) e
+(ha) n(v) o(e) h(compiled) f(will) j(be) e(link) o(ed) g(again) n(s) i
+(k) o(erb) n(eros.) 24 b(This) 17 b(may) f(cause) g(some) h(linkin) n
+(g) g(prob) n(lems) 150 3579 y(on) 27 b(RedHat) h(Linux) n(.) 48
+b(The) 28 b(w) o(ork) n(aroun) n(d) g(for) f(this) h(problem) e(is) j
+(to) f(type) f(this) h(comma) n(nd) g(befo) n(re) g(you) f(comp) n
+(ile.) 48 b(See) 150 3678 y(chapter) 19 b(2.2.1) n(.2) h(for) g(mor) n
+(e) h(info\)) e(:) p Fk 150 3782 a($) 40 b(export) f(LDFLAGS=) n
+("-L/usr/kerber) n(os/lib) g(-lkrb5) g(-lgssapi_krb) n(5) h(-lpam") p
+Fh 150 4045 a(2.6.2) 99 b(Pr) n(oblems) 25 b(After) h(Installatio) n(n)
+p Fn 150 4225 a(2.6.2) n(.1) 82 b(P) n(ermission) 21
+b(Denied) p Fa 150 4397 a(Warning:) 88 b(fopen\("site) n(.ini","r+"\))
+150 4514 y(Permissio) n(n) 45 b(denied) f(in) g(classes/INIF) n
+(ile.php) g(on) h(line) f(80) p Fp 150 4638 a(If) 20
+b(you) f(get) i(this) f(error) f(message) h(you) g(need) f(to) h(run) g
+(the) g(\223mod\002x) n(.sh\224) g(script.) p Fn 150
+4884 a(2.6.2) n(.2) 82 b(Can) 21 b(not) f(see) h(Images) p
+Fp 150 5065 a(Image) n(Magick) d(is) h(not) f(w) o(orking) n(,) h(mak) o
+(e) f(sure) h(that) f(it) h(is) h(w) o(ork) n(ing) f(by) e(using) h
+(the) h(comm) n(and) f(line) h(comm) n(and) f(\223con) m(v) m(ert\224.)
+p Fn 150 5311 a(2.6.2) n(.3) 82 b(W) -5 b(ar) o(ning) 20
+b(about) f(T) -8 b(emp) 22 b(Dir) o(ecto) n(ry) p Fp
+150 5491 a(If) e(you) f(get) i(an) o(y) e(such) h(w) o(arning) f(you) g
+(need) h(to) g(set) h(the) f(temp) g(director) n(y) g(in) h(php) n
+(.ini.) p 150 5723 V 1871 5823 a(17) p 90 rotate dyy
+eop
 %%Page: 18 19
 18 18 bop 150 138 a
  currentpoint currentpoint translate 0.42603 0.42603 scale neg exch
@@ -7856,7 +7865,7 @@ neg exch neg exch translate
 (module,) f(apache) g(dies) h(immediately) -6 b(.) p
 Fp 150 513 a(RedHat) 30 b(as) g(released) f(ne) n(w) g(v) o(ersio) n
 (ns) h(of) f(the) h(open) n(ssl) h(pack) n(ages) f(for) f(RedHat) g
-(7.x) p Fe 2665 483 a(6) p Fp 2697 513 a(.) 53 b(If) 30
+(7.x) p Fe 2665 483 a(7) p Fp 2697 513 a(.) 53 b(If) 30
 b(these) f(erratas) g(is) i(installed) 150 613 y(befor) n(e) 24
 b(you) e(compile) h(php) n(,) i(you) n(r) f(php) e(modu) n(le) i(will) g
 (be) f(link) o(ed) g(again) n(s) i(these.) 34 b(This) 24
@@ -7914,7 +7923,7 @@ b(\(jpe) o(g) n(src.v6b) -5 b(.tar) g(.gz\)) p Fi 275
 b(\(ph) n(p-4.0) n(.4pl1.) n(tar) -5 b(.gz\)) 150 5358
 y(Delete) 20 b(all) h(gd.h) e(\002les) i(on) f(your) f(system.) 25
 b(Y) -9 b(ou) 20 b(can) g(\002nd) g(them) g(using) n(:) p
-150 5511 1410 4 v Fg 240 5567 a(6) p Ff 270 5590 a(The) c(probl) r(em) g
+150 5511 1410 4 v Fg 240 5565 a(7) p Ff 270 5589 a(The) c(probl) r(em) g
 (descr) r(ibed) i(here) f(may) g(only) h(apply) g(to) g(RedHat) g(7.0) p
 150 5723 3525 4 v Fp 1871 5823 a(18) p 90 rotate dyy
 eop
@@ -12641,12 +12650,12 @@ b(.) 25 b(W) -7 b(e) 19 b(ha) n(v) o(e) f(ho) n(we) n(v) m(er) g(recei)
 n(v) o(ed) f(repo) n(rts) i(that) f(since) h(IIS) 150
 4870 y(does) h(not) g(ha) n(v) o(e) f(a) i(mod_) n(re) n(write) f(modu)
 n(le) h(you) e(may) h(use) g(this) h(hack) p Fe 2134
-4840 a(7) p Fp 2187 4870 a(instead:) p Fn 150 5116 a(IIS) h
+4840 a(8) p Fp 2187 4870 a(instead:) p Fn 150 5116 a(IIS) h
 (Con\002gura) n(tion:) p Fp 150 5296 a(-) e(Create) h(the) f(virtual) g
 (hosts) g(for) g(IIS.) g(\(on) n(ly) h(tested) f(on) g(win20) n(00\))
 150 5421 y(\(here) f(comes) h(the) g(not) g(so) h(ele) o(ga) n(nt) g
-(part\)) p 150 5474 1410 4 v Fg 240 5528 a(7) p Ff 270
-5551 a(Since) 16 b(eZ) f(publish) h(no) n(w) g(can) g(be) f(run) h
+(part\)) p 150 5474 1410 4 v Fg 240 5529 a(8) p Ff 270
+5553 a(Since) 16 b(eZ) f(publish) h(no) n(w) g(can) g(be) f(run) h
 (without) g(mod_re) n(w) r(rite) g(you) f(may) h(tak) o(e) g(look) g
 (at) g(chap) r(ter) f(3) g(as) h(it) f(may) h(pro) o(vide) g(you) g
 (with) g(a) f(bett) r(er) g(soluti) r(on) p 150 5723
@@ -13019,7 +13028,7 @@ neg exch neg exch translate
  150 138 a 150 172 3525 4 v Fp 150
 333 a(-) 20 b(In) g(the) h(virtu) n(al) g(hosts) f(con\002g) g(for) f
 (the) i(user) f(site,) g(change) f(the) i(custom) e(error) n(s) p
-Fe 2455 303 a(8) p Fp 2510 333 a(for) g(404) h(and) f(405) g(to:) 254
+Fe 2455 303 a(9) p Fp 2510 333 a(for) g(404) h(and) f(405) g(to:) 254
 457 y(Message) h(type:) 25 b(URL) 254 582 y(URL:) c(/inde) o(x) n(.php)
 150 706 y(-) f(In) g(the) h(virtu) n(al) g(hosts) f(con\002g) g(for) f
 (the) i(admin) e(site,) i(chan) n(ge) g(the) f(custom) f(errors) h(for)
@@ -13043,7 +13052,7 @@ b(.) p Fh 150 2331 a(2.9.1) 99 b(Do) o(wnload) 25 b(the) g(F) n(ollo) o
 2636 y(That') -5 b(s) 20 b(all;) h(read) f(the) g(manu) n(al) h(from) e
 (the) i(start) f(after) g(that,) g(and) g(install) h(eZ) f(pub) n(lish)
 h(as) g(described) n(.) p 150 5455 1410 4 v Fg 240 5510
-a(8) p Ff 270 5534 a(The) 15 b(eZ) h(publi) r(sh) f(de) n(v) q(elope) r
+a(9) p Ff 270 5534 a(The) 15 b(eZ) h(publi) r(sh) f(de) n(v) q(elope) r
 (rs) g(w) o(ant) i(to) g(point) g(out) f(that) i(this) e(does) h(NO) m
 (T) e(seem) h(to) g(be) h(a) f(secure) h(w) o(orka) r(round.) j(This) c
 (w) o(orkar) r(ound) g(should) h(not) f(be) 150 5613
