--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -13,6 +13,7 @@ Changes from 2.2.5 to 2.2.6
 * Fixed a bug in forgot password
 * Group edit now only shows permissions from enabled modules.
 * We don't print error messages if we have missing entries in site.ini and debugging is off.
+* Fixed bug in eZ trade with options in confirmation mail.
 
 Changes from 2.2.4 to 2.2.5
 ---------------------------
