--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -14,6 +14,8 @@ Changes from 2.2.5 to 2.2.6
 * Group edit now only shows permissions from enabled modules.
 * We don't print error messages if we have missing entries in site.ini and debugging is off.
 * Fixed bug in eZ trade with options in confirmation mail.
+* Fixed bug in statistics.
+* Added workaround for Eudora e-mail.
 
 Changes from 2.2.4 to 2.2.5
 ---------------------------
