--- a/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
+++ b/contribution/versions/ezpublish2/branches/eZPublish_2_2_final_branch/projects/php/publish_dist/CHANGELOG
@@ -1,6 +1,10 @@
 eZ publish changelog:
 ---------------------
 
+Changes from 2.2.6 to 2.2.7
+---------------------------
+* Fixed several bugs with the referer list in eZ stats.
+
 Changes from 2.2.5 to 2.2.6
 ---------------------------
 * Forum messages doesn't show posting time when message is temporary.
